--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,41 +1,51 @@
 * {
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -webkit-text-size-adjust: none;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  vertical-align: top; }
+	-webkit-text-size-adjust: none;
+	box-sizing: padding-box;
+	margin: 0;
+	padding: 0;
+	vertical-align: top;
+}
 
 body {
-  line-height: 1; }
+	line-height: 1;
+}
 
 a {
-  color: inherit;
-  outline: none;
-  text-decoration: none; }
-  a img {
-    border: none; }
+	color: inherit;
+	outline: none;
+	text-decoration: none;
+}
+
+a img {
+	border: none;
+}
 
 button {
-  -webkit-appearance: none;
-  -webkit-border-radius: 0; }
-  button ::-moz-focus-inner {
-    border: 0;
-    padding: 0; }
+	-webkit-appearance: none;
+	-webkit-border-radius: 0;
+}
+
+button ::-moz-focus-inner {
+	border: 0;
+	padding: 0;
+}
 
 table {
-  border-collapse: separate;
-  border-spacing: 0;
-  vertical-align: middle; }
-  table th {
-    vertical-align: middle; }
-  table td {
-    vertical-align: middle; }
+	border-collapse: separate;
+	border-spacing: 0;
+	vertical-align: middle;
+}
+
+table th {
+	vertical-align: middle;
+}
+
+table td {
+	vertical-align: middle;
+}
 
 :focus {
-  outline: 0; }
+	outline: 0;
+}
 
 /*# sourceMappingURL=reset.css.map */
