--- a/styles.scss
+++ b/styles.scss
@@ -129,6 +129,9 @@ body {
 						&.yellow {
 							background-color: $yellow;
 						}
+						&.light_orange {
+							background-color: $light_orange;
+						}
 					}
 				}
 			}
